fixing the scroll overflow ?

--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -56,12 +56,13 @@
 .container {
   position: absolute;
   z-index: 9000;
-  overflow-x: hidden;
+
+  overflow-y: scroll;
 
   isolation: isolate;
 
   width: 100%;
-  max-height: 94%;
+  max-height: 94dvh;
   max-width: $screen-w-lg;
 
   border: none;
@@ -71,7 +72,6 @@
 
   display: flex;
   flex-direction: column;
-  // gap: 3rem;
 
   top: 50%;
   left: 50%;
