--- a/src/pages/Home/components/FilterModal/FilterModal.module.scss
+++ b/src/pages/Home/components/FilterModal/FilterModal.module.scss
@@ -10,8 +10,6 @@
   padding: 3rem;
   color: var(--text-primary);
 
-  overflow-y: scroll;
-
   & h1 {
     font-size: 4rem;
     font-size: $text-7xl;
